--- a/EightBot.Orbit.Client/EightBot.Orbit.Client.csproj
+++ b/EightBot.Orbit.Client/EightBot.Orbit.Client.csproj
@@ -9,5 +9,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LiteDB" Version="4.1.4" />
+    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
   </ItemGroup>
 </Project>
