--- a/EightBot.Orbit.Tests/EightBot.Orbit.Tests.csproj
+++ b/EightBot.Orbit.Tests/EightBot.Orbit.Tests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
     <PackageReference Include="Bogus" Version="27.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
