--- a/EightBot.Orbit.Client/EightBot.Orbit.Client.csproj
+++ b/EightBot.Orbit.Client/EightBot.Orbit.Client.csproj
@@ -11,4 +11,7 @@
     <PackageReference Include="LiteDB" Version="4.1.4" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SyncReconcilers\" />
+  </ItemGroup>
 </Project>
