--- a/OrbitSample/OrbitSample.csproj
+++ b/OrbitSample/OrbitSample.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.264807" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="Splat" Version="7.1.1" />
@@ -20,5 +20,6 @@
   <ItemGroup>
     <ProjectReference Include="..\EightBot.Orbit.Core\EightBot.Orbit.Core.csproj" />
     <ProjectReference Include="..\EightBot.Orbit.Client\EightBot.Orbit.Client.csproj" />
+    <ProjectReference Include="..\OrbitSample.Models\OrbitSample.Models.csproj" />
   </ItemGroup>
 </Project>
