--- a/EightBot.Orbit.Tests/EightBot.Orbit.Tests.csproj
+++ b/EightBot.Orbit.Tests/EightBot.Orbit.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -17,7 +17,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EightBot.Orbit.Core\EightBot.Orbit.Core.csproj" />
-    <ProjectReference Include="..\EightBot.Orbit.Client\EightBot.Orbit.Client.csproj" />
     <ProjectReference Include="..\EightBot.Orbit.Server.Web\EightBot.Orbit.Server.Web.csproj" />
     <ProjectReference Include="..\EightBot.Orbit.Server\EightBot.Orbit.Server.csproj" />
   </ItemGroup>
