--- a/EightBot.Orbit.Server/EightBot.Orbit.Server.csproj
+++ b/EightBot.Orbit.Server/EightBot.Orbit.Server.csproj
@@ -7,6 +7,7 @@
     <Company>Eight-Bot</Company>
     <Authors>Nathan</Authors>
     <Description>Server side sync compents</Description>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
