--- a/EightBot.Orbit.Server.Web.nuspec
+++ b/EightBot.Orbit.Server.Web.nuspec
@@ -2,6 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
     <metadata>
         <id>EightBot.Orbit.Server.Web</id>
+        <title>Orbit Sync Server Extensions for ASP.NET Core Apps by Eight-Bot</title>
         <version>$version$</version>
         <authors>Eight-Bot, Inc.</authors>
         <owners>Eight-Bot, Inc.</owners>
