--- a/EightBot.Orbit.Core/EightBot.Orbit.Core.csproj
+++ b/EightBot.Orbit.Core/EightBot.Orbit.Core.csproj
@@ -1,11 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>EightBot.Orbit</RootNamespace>
+    <LangVersion>latestmajor</LangVersion>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="Class1.cs" />
-  </ItemGroup>
 </Project>
