--- a/EightBot.Orbit.Client/EightBot.Orbit.Client.csproj
+++ b/EightBot.Orbit.Client/EightBot.Orbit.Client.csproj
@@ -8,10 +8,9 @@
     <ProjectReference Include="..\EightBot.Orbit.Core\EightBot.Orbit.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="5.0.0" />
-    <PackageReference Include="EightBot.Tycho" Version="1.2022.120.10" />
-    <PackageReference Include="EightBot.Tycho.JsonSerializer.NewtonsoftJson" Version="1.2022.120.10" />
-    <PackageReference Include="EightBot.Tycho.JsonSerializer" Version="1.2022.120.10" />
+    <PackageReference Include="Tycho" Version="2.1.1" />
+    <PackageReference Include="Tycho.JsonSerializer" Version="2.1.1" />
+    <PackageReference Include="System.Threading.RateLimiting" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SyncReconcilers\" />
