Add GitHub package source to nuget.config
This commit adds a new package source for Eight-Bot on GitHub to the nuget.config file.

--- a/nuget.config
+++ b/nuget.config
@@ -16,5 +16,6 @@
   <packageSources>
     <add key="nuget.org v3" value="https://api.nuget.org/v3/index.json" />
     <add key="Eight-Bot" value="https://eightbot.pkgs.visualstudio.com/_packaging/Eight-Bot/nuget/v3/index.json" />
+    <add key="Eight-Bot GitHub" value="https://nuget.pkg.github.com/theeightbot/index.json" />
   </packageSources>
 </configuration>
