--- a/nuget.config
+++ b/nuget.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <solution>
     <add key="disableSourceControlIntegration" value="true" />
@@ -7,12 +7,6 @@
     <add key="enabled" value="True" />
     <add key="automatic" value="True" />
   </packageRestore>
-  <packageSourceCredentials>
-      <Eight-Bot>
-          <add key="Username" value="eightbot" />
-          <add key="ClearTextPassword" value="fhzm2mp7tsc3pwmavvskpzxhgljspxc4y5m4eofwjepl2qlbkc6q" />
-      </Eight-Bot>
-  </packageSourceCredentials>  
   <packageSources>
     <add key="nuget.org v3" value="https://api.nuget.org/v3/index.json" />
     <add key="Eight-Bot" value="https://eightbot.pkgs.visualstudio.com/_packaging/Eight-Bot/nuget/v3/index.json" />
