--- a/nuget.config
+++ b/nuget.config
@@ -10,6 +10,6 @@
   <packageSources>
     <add key="nuget.org v3" value="https://api.nuget.org/v3/index.json" />
     <add key="Eight-Bot_Packages" value="https://eightbot.pkgs.visualstudio.com/a9a63e6a-9fb7-4a09-bd2d-7d00819f1811/_packaging/Eight-Bot_Packages/nuget/v3/index.json" />
-    <add key="Eight-Bot GitHub" value="https://nuget.pkg.github.com/theeightbot/index.json" />
+    <add key="Eight-Bot GitHub" value="https://nuget.pkg.github.com/TheEightBot/index.json" />
   </packageSources>
 </configuration>
